# ci-cd-sandbox-v3

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/actions/check-commit-messages/: action.yml
.github/workflows/: dev-pr-merge.yml  dev-pr.yml
2.2/: 404.html  index.html  objects.inv  search.html
2.2/reference/: index.html
2.2/search/: search_index.json
docs/: reference.md
src/: calculator.py
tests/: test_calculator.py
